fixed profile petitions overlap

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -165,7 +165,6 @@
   padding-top: 35px;
   margin: 10px auto;
   width: 50%;
-  height: 425px;
   text-align: center;
 }
 
